--- a/index.html
+++ b/index.html
@@ -156,6 +156,9 @@
 				<td><a href="OBN-Transcribe.html">תמלול</a></td>
 			</tr>
 			<tr>
+				<td><a href="OBN-Transcribe-v1.html">תמלול גרסה 1</a></td>
+			</tr>			
+			<tr>
 				<td><a href="OBN-Mindmap-Groq.html">יצירת מפת חשיבה</a></td>
 			</tr>			
 			<tr>
