--- a/OBN-List.html
+++ b/OBN-List.html
@@ -214,9 +214,9 @@
         let items = `
         בגדים:חולצות קצרות (2), חולצות ארוכות (2), מכנסיים (2), פיג'מה (1), גרביים (3), תחתונים (3), סווטשירט (1);
         נעליים:נעלים גבוהות, כפכפים למקלחת;
-        היגיינה:מברשת שיניים, שמפו, סבון, מברשת, מגבת;
+        היגיינה:שמפו, סבון, מברשת;
         אביזרים:כובע, תיק גב קטן ליום טיול, בקבוק מים, טלפון, מטען לטלפון, אוזניות;
-        כללי:ספר, משחק קטן או קלפים
+        כללי:תיק גב, ספר, משחק קטן או קלפים
         `;
         
         let itemsArray = [];
