--- a/OBN-List.html
+++ b/OBN-List.html
@@ -214,7 +214,7 @@
         let items = `
         בגדים:חולצות קצרות (2), חולצות ארוכות (2), מכנסיים (2), פיג'מה (1), גרביים (3), תחתונים (3), סווטשירט (1);
         נעליים:נעלים גבוהות, כפכפים למקלחת;
-        היגיינה:שמפו, סבון, מברשת;
+        היגיינה:שמפו, סבון, מברשת שיער;
         אביזרים:כובע, תיק גב קטן ליום טיול, בקבוק מים, טלפון, מטען לטלפון, אוזניות;
         כללי:תיק גב, ספר, משחק קטן או קלפים
         `;
