--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
                 <td><a href="OBN-Eng.html">לימוד אנגלית</a></td>
             </tr>		
             <tr>
+                <td><a href="OBN-Eng.html">יצירת מפות "הקול שלנו"</a></td>
+            </tr>					
+            <tr>
                 <td><a href="OBN-Eng-02.html">לימוד אנגלית 2</a></td>
             </tr>					
             <tr>
