--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <td><a href="OBN-Eng.html">לימוד אנגלית</a></td>
             </tr>		
             <tr>
-                <td><a href="OBN-Eng.html">יצירת מפות "הקול שלנו"</a></td>
+                <td><a href="Ourvoice.html">יצירת מפות "הקול שלנו"</a></td>
             </tr>					
             <tr>
                 <td><a href="OBN-Eng-02.html">לימוד אנגלית 2</a></td>
