--- a/Ourvoice.html
+++ b/Ourvoice.html
@@ -127,7 +127,7 @@
         <h1>ממיר נתוני המיפוי - הקול שלנו</h1>
         <p class="description">האפליקציה מסננת ומייצאת נתונים מקובץ האקסל של <a href="https://app.eye.do/"  target="_blank">	מערכת "הקול שלנו" </a>
 		לפורמט איתו אפשר ליצור מפות במערכות:<br>
-		,<a href="https://www.google.com/mymaps"  target="_blank">Google Maps</a> ,<a href="https://earth.google.com/web/"  target="_blank">Google Earth</a>, <a href="https://www.gpsvisualizer.com/map_input"  target="_blank"> GPSVisualizer</a><br> <button class="btn btn-red" onclick="openHelpModal()">עזרה</button></p>
+		,<a href="https://www.google.com/mymaps" target="_blank">Google Maps</a> ,<a href="https://earth.google.com/web/"  target="_blank">Google Earth</a>, <a href="https://www.gpsvisualizer.com/map_input" target="_blank"> GPSVisualizer</a><br> <button class="btn btn-red" onclick="openHelpModal()">עזרה</button></p>
         <input type="file" id="fileInput" accept=".xlsx, .xls" style="display: none;">
         <button class="btn btn-blue" onclick="forceFileReload()">בחר קובץ אקסל</button>
         <div id="fileName"></div>
@@ -169,7 +169,7 @@
         כדי להשתמש באפליקציה:<br>
         1. העלו את קובץ האקסל שייצאתם ממערכת הניהול של "הקול שלנו". ודאו שהוא כולל לפחות את העמודות:  'תאריך דיווח', 'קו רוחב', 'קו אורך', 'גורם מעודד או מעכב',
             'מהות הגורם המעכב', 'מהות הגורם המעודד הליכה', 'בטיחות בדרכים', 'מפגעי פסולת', 'הנגשה ונגישות', 'גינון', 'תשתיות ותאורה'. <br>
-        2. תוכלו לייצא לאחת מהמערכות האלה: <a href="https://www.google.com/mymaps"  target="_blank">Google Maps</a>, <a href="https://earth.google.com/web/" target="_blank">Google Earth</a>, <a href="https://www.gpsvisualizer.com/map_input target="_blank""> GPSVisualizer</a>.<br> 
+        2. תוכלו לייצא לאחת מהמערכות האלה: <a href="https://www.google.com/mymaps"  target="_blank">Google Maps</a>, <a href="https://earth.google.com/web/" target="_blank">Google Earth</a>, <a href="https://www.gpsvisualizer.com/map_input" target="_blank""> GPSVisualizer</a>.<br> 
 		לחצו על הכפתור המתאים למערכת שתרצו לעבוד איתה.<br>
         3. עברו לאתר <a href="https://www.google.com/mymaps target="_blank""> Google My Maps</a><br>
         3. צרו מפה חדשה ותנו לה שם. למשל: אשדוד, 08-10-2024 אם המפה צריכה לתעד את הנתונים מתאריך זה<br>
