--- a/Ourvoice.html
+++ b/Ourvoice.html
@@ -171,7 +171,7 @@
             'מהות הגורם המעכב', 'מהות הגורם המעודד הליכה', 'בטיחות בדרכים', 'מפגעי פסולת', 'הנגשה ונגישות', 'גינון', 'תשתיות ותאורה'. <br>
         2. תוכלו לייצא לאחת מהמערכות האלה: <a href="https://www.google.com/mymaps"  target="_blank">Google Maps</a>, <a href="https://earth.google.com/web/" target="_blank">Google Earth</a>, <a href="https://www.gpsvisualizer.com/map_input" target="_blank""> GPSVisualizer</a>.<br> 
 		לחצו על הכפתור המתאים למערכת שתרצו לעבוד איתה.<br>
-        3. עברו לאתר <a href="https://www.google.com/mymaps target="_blank""> Google My Maps</a><br>
+        3. עברו לאתר <a href="https://www.google.com/mymaps" target="_blank""> Google My Maps</a><br>
         3. צרו מפה חדשה ותנו לה שם. למשל: אשדוד, 08-10-2024 אם המפה צריכה לתעד את הנתונים מתאריך זה<br>
         4. לחצו על "ייבוא" וטענו את קובץ האקסל שייצאתם<br>
 		5. סמנו את שדה קו אורך וחברו אותו ל"קו אורך". עשו אותו דבר עם קו הרוחב ולחצו על המשך<br>
