--- a/PhotoTips.html
+++ b/PhotoTips.html
@@ -250,8 +250,8 @@
                 content: "כדאי לצלם בכל מקום או סיטואציה <b>מספר תמונות</b>, במספר אפשרויות וזוויות. לאחר מכן תוכלו לבחור את התמונה הטובה ביותר.<br><br><i>טיפ:</i> זכרו למחוק את התמונות הפחות טובות כדי לחסוך מקום אחסון."
             },
             {
-                title: "מקורות מים",
-                content: "מקורות מים, כמו אגם, גשם ושלוליות, הם הזדמנויות נהדרות לצילום השתקפויות, או צילום של טיפות על משטחים, למשל."
+                title: "השתקפויות ומים",
+                content: "מקורות מים, כמו אגם, גשם ושלוליות, הם הזדמנויות נהדרות לצילום השתקפויות, או צילום של טיפות על משטחים, למשל. אין מקור מים באזור? שפכו מעט מים על המשטח או הקרקע, הפכו את המצלמה כדי לקרב אותה למקור המים וצלמו השתקפות."
             },			
             {
                 title: "10 הדיברות לצילום דיוקן בנייד",
