--- a/Score-13.html
+++ b/Score-13.html
@@ -124,7 +124,7 @@ body[unresolved] {opacity: 0; display: block; overflow: hidden; position: relati
                         <th>חדשנות</th>
                         <th>יישומיות</th>
                         <th>מודל עסקי</th>
-                        <th>אופן ההצגה</th>
+                        <th>רושם כללי</th>
                     </tr>
                 </thead>
                 <tbody id="scoreTableBody"></tbody>
