--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
                 <td><a href="OBN-Travel-001.html">אריזה לטיול</a></td>
             </tr>									
             <tr>
+                <td><a href="OBN-Travel-002.html">2 אריזה לטיול</a></td>
+            </tr>												
+            <tr>
                 <td><a href="OBN-Text-to-Sig-Full.html">יצירת חתימה והוספה לתמונה או מסמך, גרסה 2</a></td>
             </tr>							
             <tr>
