--- a/Parents.html
+++ b/Parents.html
@@ -462,8 +462,8 @@
                         <div className="max-w-2xl mx-auto px-4 py-4">
                             <div className="flex justify-between items-center mb-2">
                                 <div>
-                                    <h1 className="text-xl font-bold text-slate-900">הורים פלוס</h1>
-                                    <p className="text-sm text-slate-500">צ'ק ליסט לילדים של הורים מבוגרים</p>
+                                    <h1 className="text-xl font-bold text-slate-900">הורים פלוס - פותח על ידי אופיר בן נתן</h1>
+                                    <p className="text-sm text-slate-500">צ'ק ליסט לבני משפחה מטפלים ולילדים של הורים מבוגרים</p>
                                 </div>
                                 <div className="text-teal-600 font-bold text-xl font-mono">
                                     {progress}%
