--- a/Parents.html
+++ b/Parents.html
@@ -488,6 +488,10 @@
                             <div className="flex items-start gap-3">
                                 <div className="mt-0.5 text-indigo-600 shrink-0"><Icons.Info /></div>
                                 <div>
+									<p className="font-semibold mb-1">אופן השימוש:</p>
+                                    <p>
+                                        עברו בין הסעיפים וסמנו מה כבר בוצע. אפשר ללחוץ שוב לביטול הסימון. אפשר לחזור לרשימה מאותו מכשיר בכל זמן נתון.
+                                    </p>									
                                     <p className="font-semibold mb-1">טיפ זהב:</p>
                                     <p>
                                         אם ההורים מתנגדים לעזרה ("אני מסתדר לבד"), כדאי להציג את הפעולות כ"זה בשבילי, שיהיה לי שקט נפשי" ולא כ"זה בשבילך כי אתה מזדקן".
