--- a/Parents.html
+++ b/Parents.html
@@ -490,7 +490,7 @@
                                 <div>
 									<p className="font-semibold mb-1">אופן השימוש:</p>
                                     <p>
-                                        עברו בין הסעיפים וסמנו מה כבר בוצע. אפשר ללחוץ שוב לביטול הסימון. אפשר לחזור לרשימה מאותו מכשיר בכל זמן נתון.
+                                        עברו בין הסעיפים וסמנו מה כבר בוצע. אפשר ללחוץ שוב לביטול הסימון. אפשר לחזור לרשימה מאותו מכשיר בכל זמן נתון. לחצו על סימן השאלה בכל קבוצה להסבר נוסף.
                                     </p>									
                                     <p className="font-semibold mb-1">טיפ זהב:</p>
                                     <p>
