--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
                 <td><a href="OBN-Travel-002.html">2 אריזה לטיול</a></td>
             </tr>												
             <tr>
+                <td><a href="Parents.html">הורים פלוס</a></td>
+            </tr>												
+            <tr>
                 <td><a href="OBN-Text-to-Sig-Full.html">יצירת חתימה והוספה לתמונה או מסמך, גרסה 2</a></td>
             </tr>							
             <tr>
