--- a/Keep-TechnoTip.html
+++ b/Keep-TechnoTip.html
@@ -198,7 +198,7 @@
                                     <Icon name="brain-circuit" size={24} />
                                 </div>
                                 <div>
-                                    <h1 className="text-xl font-bold text-slate-800 leading-none">OBN - מאגר הטכנוטיפים</h1>
+                                    <h1 className="text-xl font-bold text-slate-800 leading-none">OBN - מאגר הטכנוטיפים של אופיר בן נתן</h1>
                                     <p className="text-[10px] text-slate-400 font-medium uppercase tracking-widest mt-1">Knowledge Hub</p>
                                 </div>
                             </div>
