--- a/Keep-TechnoTip.html
+++ b/Keep-TechnoTip.html
@@ -65,8 +65,8 @@
             "וורד", 
             "סמארטפון", 
             "צילום", 
-            "ai", 
-            "בינה מלאכותית", 
+
+            "בינה מלאכותית AI", 
             "אקסל",
             "חלונות",			
             "פאורפוינט"			
