--- a/Keep-TechnoTip.html
+++ b/Keep-TechnoTip.html
@@ -66,7 +66,7 @@
             "סמארטפון", 
             "צילום", 
 
-            "בינה מלאכותית AI", 
+            "בינה מלאכותית", 
             "אקסל",
             "חלונות",			
             "פאורפוינט"			
