--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <td><a href="Parents.html">הורים פלוס</a></td>
             </tr>												
             <tr>
-                <td><a href="Keep-TechnoTip.html">מאגר הטכנוטיפים</a></td>
+                <td><a href="TechnoTip.html">מאגר הטכנוטיפים</a></td>
             </tr>												
             <tr>
                 <td><a href="OBN-Text-to-Sig-Full.html">יצירת חתימה והוספה לתמונה או מסמך, גרסה 2</a></td>
