--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
                 <td><a href="TechnoTip.html">מאגר הטכנוטיפים</a></td>
             </tr>												
             <tr>
+                <td><a href="JSON-to-Text.html">ממיר JSON לטקסט, עבור Logseq</a></td>
+            </tr>												
+            <tr>
                 <td><a href="OBN-Text-to-Sig-Full.html">יצירת חתימה והוספה לתמונה או מסמך, גרסה 2</a></td>
             </tr>							
             <tr>
