--- a/Skills.html
+++ b/Skills.html
@@ -197,7 +197,7 @@
 
     <!-- Report View (Hidden initially) -->
     <div id="report-view" class="hidden min-h-screen bg-gray-100 fixed inset-0 z-50 overflow-y-auto print-only-container">
-        <div class="max-w-3xl mx-auto bg-white min-h-screen shadow-2xl relative">
+        <div class="max-w-3xl mx-auto bg-white min-h-screen shadow-2xl relative pb-40"> <!-- Added pb-40 for scroll space -->
             
             <!-- Report Header -->
             <div class="bg-blue-900 text-white p-8">
@@ -272,15 +272,15 @@
                 
             </div>
 
-            <!-- Report Footer (Actions) -->
-            <div class="bg-gray-100 p-4 sticky bottom-0 border-t border-gray-300 flex flex-col sm:flex-row gap-3 justify-center no-print">
-                <button onclick="closeReport()" class="px-6 py-2 bg-gray-300 text-gray-700 rounded-lg hover:bg-gray-400 font-medium">
+            <!-- Report Footer (Actions) - Fixed at bottom for visibility -->
+            <div class="fixed bottom-0 left-0 right-0 bg-white shadow-[0_-4px_6px_-1px_rgba(0,0,0,0.1)] p-4 border-t border-gray-200 flex flex-col sm:flex-row gap-3 justify-center z-50 no-print pb-8 sm:pb-4">
+                <button onclick="closeReport()" class="px-6 py-3 bg-gray-200 text-gray-800 rounded-lg hover:bg-gray-300 font-bold border border-gray-300">
                     <i class="fas fa-edit"></i> חזור לעריכה
                 </button>
-                <button onclick="shareJSONToWhatsApp()" class="px-6 py-2 bg-green-500 text-white rounded-lg hover:bg-green-600 font-medium shadow-md">
-                    <i class="fab fa-whatsapp"></i> שלח נתונים בווטסאפ
+                <button onclick="shareJSONToWhatsApp()" class="px-6 py-3 bg-green-600 text-white rounded-lg hover:bg-green-700 font-bold shadow-lg flex items-center justify-center gap-2">
+                    <i class="fas fa-share-alt"></i> שלח נתונים בווטסאפ
                 </button>
-                <button onclick="copyToClipboard()" class="px-6 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600 font-medium shadow-md">
+                <button onclick="copyToClipboard()" class="px-6 py-3 bg-blue-600 text-white rounded-lg hover:bg-blue-700 font-bold shadow-lg flex items-center justify-center gap-2">
                     <i class="fas fa-copy"></i> העתק נתונים
                 </button>
             </div>
