--- a/Skills.html
+++ b/Skills.html
@@ -304,7 +304,7 @@
                 color: 'blue',
                 items: [
                     { id: 'emotions', title: 'זיהוי והבעת מגוון רגשות', desc: 'האם <span class="name-display">היא</span> מזהה ומביעה מגוון רגשות? האם יש רגשות שקשה לה להביע (חיוביים, שליליים, פגיעות)?' },
-                    { id: 'aspects', title: 'ביטוי היבטים רבים של העצמי', desc: 'עד כמה <span class="name-display">היא</span> נותנת לעצמה להיות ידועה במלואה מול הצגת תדמית?' },
+                    { id: 'aspects', title: 'ביטוי היבטים רבים של העצמי', desc: 'עד כמה <span class="name-display">היא</span> מאפשרת לעצמה להביא את עצמה כמו שהיא, לעומת הצגת תדמית?' },
                     { id: 'acceptance', title: 'קבלה עצמית', desc: 'האם יש חלקים בעצמה שקשה לה לקבל? האם <span class="name-display">היא</span> חשה בושה לגביהם?' },
                     { id: 'intuition', title: 'אמון באינטואיציה', desc: 'האם <span class="name-display">היא</span> נוטה להיות אנליטית מדי ולזלזל בתחושות הבטן שלה? האם יש לה ספק עצמי רב?' },
                     { id: 'needs', title: 'מילוי הצרכים האישיים', desc: 'עד כמה <span class="name-display">היא</span> מכבדת את הצרכים שלה, או נוטה "לוותר עליהם" כשהם מתנגשים עם רצון אחרים? האם <span class="name-display">היא</span> מתקשרת את הצרכים שלה או יודעת לשים גבולות לאחרים?' },
